# Speech-jokey

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/windows/: build_exe_onefile.ps1
.github/static/: SpeechJokey.spec  SpeechJokey.spec.linux  SpeechJokey.spec.macosx  SpeechJokey.spec.windows
.github/static/kivy/tools/packaging/pyinstaller_hooks/: __init__.py
.github/workflows/: ci_exe_windows.yml  ci_pr-main_exe_windows.yml  ci_push-main_exe_windows.yml  pyinstaller.yml
doc/: developer.md
doc/diagrams/: UI-organization-v2.drawio
playground/: KivyProperties.py  card-example.py  convert_text.py  selection_words.py  tabs-example.py  test-elevenlabs-api.py
playground/playback/: kivy-audio.py  play_long_file.py  sd-playback.py
src/: SpeechJokey.kv  main.py  test_widget.py
src/api/: api_factory.py  base.py
src/api/amazonpollyapi/: amazonpollyapi.kv  amazonpollyapi.py
src/api/coquiapi/: coquiapi.kv  coquiapi.py
src/api/elevenlabsapi/: elevenlabsapi.kv  elevenlabsapi.py
src/api/exampleapi/: exampleapi.kv  exampleapi.py
src/api/gttsapi/: gttsapi.kv  gttsapi.py
src/api/msazureapi/: msazureapi.kv  msazureapi.py
src/api/ofaiapi/: ofaiapi.kv  ofaiapi.py
src/api/openaiapi/: openaiapi.kv  openaiapi.py
src/api/orcaapi/: orcaapi.kv  orcaapi.py
src/api/pyttsx3api/: pyttsx3api.kv  pyttsx3api.py
src/api/pyttsx3api/espeak_phonemizer-1.3.1/: setup.py
src/modules/util/: widget_loader.py
src/screens/: main_screen.kv  main_screen.py  settings.kv  settings.py
src/settings/: app_settings.py
